@@ -28,9 +28,9 @@
 
 <p>When a set similar to this is defined using only column vectors where all the entries are from the real numbers, it is written as ${\mathbb R}^m$ and is known as <define>Euclidean $m$-space</define>.</p>
 
-<p>The term <q>vector</q> is used in a variety of different ways.  We have defined it as an ordered list written vertically.  It could simply be an ordered list of numbers, and written as $\left(2,\,3,\,-1,\,6\right)$.  Or it could be interpreted as a point in $m$ dimensions, such as $\left(3,\,4,\,-2\right)$ representing a point in three dimensions relative to $x$, $y$ and $z$ axes.  With an interpretation as a point, we can construct an arrow from the origin to the point which is consistent with the notion that a vector has direction and magnitude.</p>
+<p>The term <define>vector</define> is used in a variety of different ways.  We have defined it as an ordered list written vertically.  It could simply be an ordered list of numbers, and perhaps written as $\left\langle 2,\,3,\,-1,\,6\right\rangle)$.  Or it could be interpreted as a point in $m$ dimensions, such as $\left(3,\,4,\,-2\right)$ representing a point in three dimensions relative to $x$, $y$ and $z$ axes.  With an interpretation as a point, we can construct an arrow from the origin to the point which is consistent with the notion that a vector has direction and magnitude.</p>
 
-<p>All of these ideas can be shown to be related and equivalent, so keep that in mind as you connect the ideas of this course with ideas from other disciplines.  For now, we'll stick with the idea that a vector is just a list of numbers, in some particular order.</p>
+<p>All of these ideas can be shown to be related and equivalent, so keep that in mind as you connect the ideas of this course with ideas from other disciplines.  For now, we will stick with the idea that a vector is just a list of numbers, in some particular order.</p>
 
 <sageadvice acro="VSCV" index="vector spaces!column vectors">
 <title>Vector Spaces of Column Vectors</title>
@@ -111,9 +111,9 @@ X == W
 </notation>
 </definition>
 
-<p>Now this may seem like a silly (or even stupid) thing to say so carefully.  Of course two vectors are equal if they are equal for each corresponding entry!  Well, this is not as silly as it appears.  We will see a few occasions later where the obvious definition is <em>not</em> the right one.  And besides, in doing mathematics we need to be very careful about making all the necessary definitions and making them unambiguous.  And we've done that here.</p>
+<p>Now this may seem like a silly (or even stupid) thing to say so carefully.  Of course two vectors are equal if they are equal for each corresponding entry!  Well, this is not as silly as it appears.  We will see a few occasions later where the obvious definition is <em>not</em> the right one.  And besides, in doing mathematics we need to be very careful about making all the necessary definitions and making them unambiguous.  And we have done that here.</p>
 
-<p>Notice now that the symbol <q>=</q> is now doing triple-duty.  We know from our earlier education what it means for two numbers (real or complex) to be equal, and we take this for granted.  In <acroref type="definition" acro="SE" /> we defined what it meant for two sets to be equal.  Now we have defined what it means for two vectors to be equal, and that definition builds on our definition for when two numbers are equal when we use the condition $u_i=v_i$ for all $1\leq i\leq m$.  So think carefully about your objects when you see an equal sign and think about just which notion of equality you have encountered.  This will be especially important when you are asked to construct proofs whose conclusion states that two objects are equal.</p>
+<p>Notice now that the symbol <q>=</q> is now doing triple-duty.  We know from our earlier education what it means for two numbers (real or complex) to be equal, and we take this for granted.  In <acroref type="definition" acro="SE" /> we defined what it meant for two sets to be equal.  Now we have defined what it means for two vectors to be equal, and that definition builds on our definition for when two numbers are equal when we use the condition $u_i=v_i$ for all $1\leq i\leq m$.  So think carefully about your objects when you see an equal sign and think about just which notion of equality you have encountered.  This will be especially important when you are asked to construct proofs whose conclusion states that two objects are equal.  If you have an electronic copy of the book, such as the PDF version, searching on <q>Definition CVE</q> can be an instructive exercise.  See how often, and where, the definition is employed.</p>
 
 <p>OK, let's do an example of vector equality that begins to hint at the utility of this definition.</p>
 
@@ -131,7 +131,7 @@ X == W
 =
 \colvector{-33\\24\\5}.
 </equation>
-By <acroref type="definition" acro="CVE" />, this <em>single</em> equality (of two column vectors) translates into <em>three</em> simultaneous equalities of numbers that form the system of equations.  So with this new notion of vector equality we can become less reliant on referring to <em>systems</em> of <em>simultaneous</em> equations.  There's more to vector equality than just this, but this is a good example for starters and we will develop it further.</p>
+By <acroref type="definition" acro="CVE" />, this <em>single</em> equality (of two column vectors) translates into <em>three</em> simultaneous equalities of numbers that form the system of equations.  So with this new notion of vector equality we can become less reliant on referring to <em>systems</em> of <em>simultaneous</em> equations.  There is more to vector equality than just this, but this is a good example for starters and we will develop it further.</p>
 
 </example>
 
@@ -162,12 +162,10 @@ By <acroref type="definition" acro="CVE" />, this <em>single</em> equality (of t
 <![CDATA[\vect{u}=\colvector{2\\-3\\4\\2}&&\vect{v}=\colvector{-1\\5\\2\\-7}]]>
 </alignmath>
 then
-<equation>
-\vect{u}+\vect{v}=
+<equation>\vect{u}+\vect{v}=
 \colvector{2\\-3\\4\\2}+\colvector{-1\\5\\2\\-7}=
 \colvector{2+(-1)\\-3+5\\4+2\\2+(-7)}=
-\colvector{1\\2\\6\\-5}.
-</equation>
+\colvector{1\\2\\6\\-5}</equation>
 </p>
 
 </example>
@@ -190,7 +188,7 @@ then
 </notation>
 </definition>
 
-<p>Notice that we are doing a kind of multiplication here, but we are <em>defining</em> a new type, perhaps in what appears to be a natural way.  We use juxtaposition (smashing two symbols together side-by-side) to denote this operation rather than using a symbol like we did with vector addition.  So this can be another source of confusion.  When two symbols are next to each other, are we doing regular old multiplication, the kind we've done for years, or are we doing scalar vector multiplication, the operation we just defined?  Think about your objects <mdash /> if the first object is a scalar, and the second is a vector, then it <em>must</em> be that we are doing our new operation, and the <em>result</em> of this operation will be another vector.</p>
+<p>Notice that we are doing a kind of multiplication here, but we are <em>defining</em> a new type, perhaps in what appears to be a natural way.  We use juxtaposition (smashing two symbols together side-by-side) to denote this operation rather than using a symbol like we did with vector addition.  So this can be another source of confusion.  When two symbols are next to each other, are we doing regular old multiplication, the kind we have done for years, or are we doing scalar vector multiplication, the operation we just defined?  Think about your objects <mdash /> if the first object is a scalar, and the second is a vector, then it <em>must</em> be that we are doing our new operation, and the <em>result</em> of this operation will be another vector.</p>
 
 <p>Notice how consistency in notation can be an aid here.  If we write scalars as lower case Greek letters from the start of the alphabet (such as $\alpha$, $\beta$, <ellipsis />) and write vectors in bold Latin letters from the end of the alphabet ($\vect{u}$, $\vect{v}$,  <ellipsis />), then we have some hints about what type of objects we are working with.  This can be a blessing <em>and</em> a curse, since when we go read another book about linear algebra, or read an application in another discipline (physics, economics,  <ellipsis />) the types of notation employed may be very different and hence unfamiliar.</p>
 
@@ -319,7 +317,7 @@ If $\vect{u}\in\complex{m}$, then $1\vect{u}=\vect{u}$.</content></property>
 
 <proof>
 <p>
-While some of these properties seem very obvious, they all require proof.  However, the proofs are not very interesting, and border on tedious. We'll prove one version of distributivity very carefully, and you can test your proof-building skills on some of the others.  We need to establish an equality, so we will do so by beginning with one side of the equality, apply various definitions and theorems (listed to the right of each step) to massage the expression from the left into the expression on the right.   Here we go with a proof of <acroref type="property" acro="DSAC" />.</p>
+While some of these properties seem very obvious, they all require proof.  However, the proofs are not very interesting, and border on tedious. We will prove one version of distributivity very carefully, and you can test your proof-building skills on some of the others.  We need to establish an equality, so we will do so by beginning with one side of the equality, apply various definitions and theorems (listed to the right of each step) to massage the expression from the left into the expression on the right.   Here we go with a proof of <acroref type="property" acro="DSAC" />.</p>
 
 <p>For $1\leq i\leq m$,
 <alignmath>
@@ -357,7 +355,7 @@ We will see later how to derive this property as a <em>consequence</em> of sever
 <p>A final note.  <acroref type="property" acro="AAC" /> implies that we do not have to be careful about how we <q>parenthesize</q> the addition of vectors.  In other words, there is nothing to be gained by writing
 $\left(\vect{u}+\vect{v}\right)+\left(\vect{w}+\left(\vect{x}+\vect{y}\right)\right)$
 rather than
-$\vect{u}+\vect{v}+\vect{w}+\vect{x}+\vect{y}$, since we get the same result no matter which order we choose to perform the four additions.  So we won't be careful about using parentheses this way.</p>
+$\vect{u}+\vect{v}+\vect{w}+\vect{x}+\vect{y}$, since we get the same result no matter which order we choose to perform the four additions.  So we will not be careful about using parentheses this way.</p>
 
 <sageadvice acro="ANC" index="coercion">
 <title>A Note on Coercion</title>
@@ -523,7 +521,7 @@ Coercion is one of the more mysterious aspects of Sage, and the above discussion
 <ol>
 <li> Where have you seen vectors used before in other courses?  How were they different?
 </li>
-<li>In words, when are two vectors equal?
+<li>In words only, when are two vectors equal?
 </li>
 <li>Perform the following computation with vector operations
 <equation>
@@ -797,13 +795,13 @@ Prove that we can express the subtraction of two vectors in terms of our two bas
 </exercise>
 
 <exercise type="T" number="31" rough="Subtraction not commutative nor associative">
-<problem contributor="robertbeezer">Prove, by using counterexamples, that vector subtraction is  not commutative and not associative.
+<problem contributor="robertbeezer">Prove, by giving counterexamples, that vector subtraction is  not commutative and not associative.
 </problem>
 </exercise>
 
 <exercise type="T" number="32" rough="Scalar multiplication distributes over subtraction">
 <problem contributor="robertbeezer">Prove that vector subtraction obeys a distributive property.  Specifically, prove that $\alpha\left(\vect{u}-\vect{v}\right)=\alpha\vect{u}-\alpha\vect{v}$.<br />
-Can you give two different proofs? Base one on the definition given in <acroref type="exercise" acro="VO.T30" /> and base the other on the equivalent formulation proved in <acroref type="exercise" acro="VO.T30" />.
+Can you give two different proofs? Distinguish your two proofs by using the alternate descriptions of vector subtraction provided by <acroref type="exercise" acro="VO.T30" />.
 </problem>
 </exercise>
 </exercisegroup>
